Registro prueba en carpeta PruebaEnJs

--- a/Pruebas/assets/css/styles.css
+++ b/Pruebas/assets/css/styles.css
@@ -1,18 +1,10 @@
-.blog .carousel-indicators {
-	left: 0;
-	top: auto;
-    bottom: -40px;
 
-}
 
-/* The colour of the indicators */
-.blog .carousel-indicators li {
-    background: #a3a3a3;
+
+.indicador{
+    width: 10px !important;
+    height: 10px !important;
     border-radius: 50%;
-    width: 8px;
-    height: 8px;
+    background-color: grey !important;
 }
 
-.blog .carousel-indicators .active {
-background: #707070;
-}
