--- a/Ricomida/assets/css/estilos.css
+++ b/Ricomida/assets/css/estilos.css
@@ -98,3 +98,12 @@ footer>p{
 .contacto p span{
     font-family: 'Lobster', cursive;
 }
+
+.indicador{
+    width: 10px !important;
+    height: 10px !important;
+    border-radius: 50%;
+    background-color: grey !important;
+}
+
+
