--- a/PruebasEnJS/assets/css/estilos.css
+++ b/PruebasEnJS/assets/css/estilos.css
@@ -69,5 +69,31 @@ body {
     font-size: 35px;
 }
 
+/*  */
+
+#personal{
+    padding: 20px;
+    margin: auto;
+    font-family: 'Cabin', sans-serif;
+    
+}
+
+.personal{
+    float: left;
+    padding: 0 50px 0;
+    font-family: 'Cabin', sans-serif;
+}
+
+.info-personal>p{
+    text-align: center;
+    padding: 30px;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: justify;
+}
+     
+
+
 
 
