--- a/PruebasEnJS/assets/css/estilos.css
+++ b/PruebasEnJS/assets/css/estilos.css
@@ -128,6 +128,27 @@ body {
     padding-bottom: 10px;
 }
 
+/*  footer */
 
+footer{
+    background: black;
+
+}
+
+.footer-redes p{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    padding: 10px;
+}
+
+.footer-redes{
+    color: white;
+    padding: 30px;
+}
+
+.fab {
+    width: 20px;
+}
 
 
