--- a/PruebasEnJS/assets/css/respaldo.css
+++ b/PruebasEnJS/assets/css/respaldo.css
@@ -2,12 +2,6 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: 'Open Sans', sans-serif;
-    /* 
-    font-family: 'Sansita Swashed', cursive; 
-    font-family: 'Anton', sans-serif;
-    font-family: 'Oswald', sans-serif;   
-    */
 }
 
 
@@ -43,8 +37,6 @@ h4{
       font-weight: bold;
       color: orangered;
       font-size: 75px;
-      font-family: 'Oswald', sans-serif;
-      font-weight: bold;
   }
 
 
@@ -64,18 +56,10 @@ h4{
     max-width: 100vw;
 }
 
-#navbar-cr{
-    font-weight: bold;
-    font-family: 'Sansita Swashed', cursive;
-    color: orangered;
-    font-size: 25px;
-}
-
 /* Carrusel */
 
 #carrusel{
     padding: 30px;
-    font-family: 'Oswald', sans-serif;
 
 }
 
@@ -86,14 +70,15 @@ h4{
     background-color: grey !important;
 }
 
+.carousel-item{
+    display: none;
+}
 
 .carrusel-caja{
     width: 100%;
     padding-top: 5px;
     padding-left: 100px;
-    border: solid 1px orangered;
-    background: #ffffff;
-    opacity: 0.6;
+    border: solid 3px ;
     border-radius: 5px;
 }
 
@@ -101,9 +86,8 @@ h4{
     text-align: center;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
-    color: rgb(34, 27, 27);
+    color: rgb(209, 98, 34);
     font-size: 35px;
-    font-family: 'Oswald', sans-serif;
 }
 
 /* Parrafos */
@@ -111,25 +95,23 @@ h4{
 #personal{
     padding: 20px;
     margin: auto;
-    text-align: justify;
+    font-family: 'Cabin', sans-serif;
     
 }
 
 .personal{
     float: left;
-    padding: 0 30px 0;
-    font-size: 14px;
+    padding: 0 50px 0;
     font-family: 'Cabin', sans-serif;
 }
 
 .info-personal>p{
     text-align: center;
-    padding: 30px 0 0 65px;
+    padding: 30px;
     color: black;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: bold;
     text-align: justify;
-    width: 90%;
 }
 
 
@@ -141,17 +123,10 @@ h4{
     padding-top: 20px;
     background: orange;
     padding-bottom: 20px;
-    height: 550px;
-}
-
-.experiencia-div {
-    padding-top: 50px;
-    height: 150px;
 }
 
 .experiencia p{
     font-size: 25px;
-    font-family: 'Oswald', sans-serif;
     text-align: center;
     font-weight: bold;
     color: red;
@@ -185,17 +160,10 @@ h4{
     font-size: 25px;
     text-align: center;
     font-weight: bold;
-    padding-top: 45px;
 }
-
-.card-box{
-    height: auto;
-    padding-top: 50px;
-}
-
 
 .card{
-    padding: 5px;
+    padding: 10px;
 }
 
 .card button{
@@ -208,16 +176,6 @@ h4{
     background: orangered;
 }
 
-
-/* typescript */
-
-h2{
-    text-align: center;
-    padding: 30px;
-    font-family: 'Oswald', sans-serif;
-}
-
-
 /*  footer */
 
 footer{
@@ -229,7 +187,6 @@ footer{
     color: white;
     text-align: center;
     font-size: 35px;
-    font-family: 'Oswald', sans-serif;
     padding: 10px 0 0 0;
 }
 
@@ -242,66 +199,15 @@ footer .fab {
 
 
 
-@media (min-width: 0px) {
-
-    header {
-        background-image: url('/PruebasEnJS/assets/img/serena.JPG');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        padding: 0px;
-        height: 650px;
+@media (max-width: 750px) {
+  
+    .container-hero .hr{
+        display: none;
     }
-
-    .container-hero{
-        margin: auto;
-        width: 100%;
-        height: 100px;
-        margin-bottom: 15px;
-        padding: 0;
-        display: block;
-    }
-
 }
 
 
+.container-hero{
+    margin-left: 20%;
+}
 
-@media (min-width: 575px) {
-
-
-    header {
-        background-image: url('/PruebasEnJS/assets/img/serena.JPG');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        padding: 0px;
-        height: 680px;
-    }
-
-    .container-hero{
-        margin: auto;
-        width: 100%;
-        height: 100px;
-        margin-bottom: 5px;
-        padding: 0;
-        display: block;
-    }
-
-    .experiencia-div {
-        height: 400px;
-    }
-
-    .experiencia-div .row{
-        padding: 50px;
-    }
-
-    .card-box{
-        height: auto;
-    }
-
-    .experiencia-div-parrafo{
-        font-size: 35px;
-        padding: 40px;
-    }
-
-        }
