--- a/PruebasEnJS/assets/css/estilos.css
+++ b/PruebasEnJS/assets/css/estilos.css
@@ -14,7 +14,7 @@
 /*  cabecera Hero */
 
 header {
-    background-image: url('/PruebasEnJS/assets/img/serena.JPG');
+    background-image: url('assets/img/serena.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
