--- a/Pruebas/Pokedex/assets/css/estilos.css
+++ b/Pruebas/Pokedex/assets/css/estilos.css
@@ -1,16 +1,14 @@
 body{
-    background-image: url(../img/pokeFondo.jpg);
+    background-image: url(../img/pokeFondo2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
-    
 }
 
 
 .pokemonTitulo {
     font-family: 'Ranchers', cursive;
-    font-size: 35px;
+    font-size: 30px;
     color: orangered
 }
 
