--- a/Pruebas/Pokedex/assets/css/estilos.css
+++ b/Pruebas/Pokedex/assets/css/estilos.css
@@ -1,14 +1,16 @@
 body{
-    background-image: url(../img/pokeFondo2.jpg);
+    background-image: url(../img/pokeFondo.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 100vh;
+    
 }
 
 
 .pokemonTitulo {
     font-family: 'Ranchers', cursive;
-    font-size: 30px;
+    font-size: 35px;
     color: orangered
 }
 
@@ -29,10 +31,10 @@ p>p{
 
 .pokemonSeccion{
  
-    border: rgb(228, 16, 16) 3px solid;
+    border: rgba(52, 43, 75, 0.897) 3px solid;
     z-index: 1;
-    width: 120px;
-    height: 140px;
+
+    height: 100px;
     border-radius: 15px;
     display: block;
     background-color: #515a9be5;
