--- a/05 - Practicas/Pokedex/assets/css/estilos.css
+++ b/05 - Practicas/Pokedex/assets/css/estilos.css
@@ -40,7 +40,7 @@ p>p{
 }
 
 .PokemonTitulo{
-    font-size: 35px;
+    font-size: 50px;
     color: black;
     font-weight: bold;
     font-family: cursive;
@@ -73,15 +73,13 @@ text-transform: capitalize;
     border: solid 1px rgba(63, 32, 201, 0.664);
     border-radius: 15px;
     background-color: rgba(63, 32, 201, 0.664);
-    height: 80px;
-    color: white;
 }
 
-#talla>li{
+#pokeDatos>li{
     text-align: left;
     padding-left: 5px;
     list-style: none;
-    color: yellow;
+    color: white;
 }
 
 
